--- a/Capitulo4/resultados_y_analisis.tex
+++ b/Capitulo4/resultados_y_analisis.tex
@@ -6,29 +6,29 @@ Se ha logrado mediante la implementación de un sistema de inversor de voltaje a
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo4/93v.jpg}
-\caption{Salida alto voltaje sin carga a 93v.}
+\caption{Salida alto voltaje sin carga a 93V.}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo4/200v.jpg}
-\caption{Salida alto voltaje sin carga a 200v.}
+\caption{Salida alto voltaje sin carga a 200V.}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo4/600v.jpg}
-\caption{Salida alto voltaje sin carga a 600v.}
+\caption{Salida alto voltaje sin carga a 600V.}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo4/986v.jpg}
-\caption{Salida alto voltaje sin carga a 986v.}
+\caption{Salida alto voltaje sin carga a 986V.}
 \end{figure}
 \newpage
 
-Como observamos se ha obtenido voltajes sin perturbaciones y con relativo bajo rizo asociado a él. Se realizaron diez mil mediciones por cada distribución y a partir de ella podemos observar un voltaje RMS de 4.15v a 93v, 0.00027v para 200v, 0.0011v para 600v y 0.0024v para 986v respectivamente. \\
+Como observamos se ha obtenido voltajes sin perturbaciones y con relativo bajo rizo asociado a él. Se realizaron diez mil mediciones por cada distribución y a partir de ella podemos observar un voltaje RMS de 4.15V a 93V, 0.00027V para 200V, 0.0011V para 600V y 0.0024V para 986V respectivamente. \\
 
 Utilizando la ecuación 2.6 podemos calcular el rizo asociado a la señal. Se observa en la tabla los siguientes resultados de nuestras mediciones con sus variables correspondientes. 
 
