--- a/tesis.tex
+++ b/tesis.tex
@@ -117,7 +117,7 @@ Juan Francisco Verdugo Arredondo
 \begin{normalsize}
 DIRECTOR:\\
 Dr. Carlos Duarte galván\\
-Dr. Christian Valerio Lizarraga\\
+Dr. Cristhian Alfonso Valerio Lizarraga\\
 \end{normalsize}
 
 
@@ -136,14 +136,14 @@ Culiacán, Sinaloa, 2018
 
 
 
-\begin{Large}
+\begin{large}
 
 \include{Agradecimientos/Dedicatoria}       % Comentar línea si no se usa
 \include{Agradecimientos/Agradecimientos}   % Comentar línea si no se usa 
 \include{Declaracion/Declaracion}           % Comentar línea si no se usa
 %\include{Resumen/Resumen}                   % Comentar línea si no se usa
 
-\end{Large}
+\end{large}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                   ÍNDICES                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -164,7 +164,7 @@ Culiacán, Sinaloa, 2018
 \def\baselinestretch{1.5}                   % Interlineado de 1.5
 %\doublespacings
 
-\begin{Large}
+\begin{large}
 
 \include{Capitulo1/introduccion}            % ~10 páginas - Explicar el propósito de la tesis
 \include{Capitulo2/marco_teorico}           % ~20 páginas - Poner un contexto a la tesis, hacer referencia a trabajos actuales en el tema
@@ -172,7 +172,7 @@ Culiacán, Sinaloa, 2018
 \include{Capitulo4/resultados_y_analisis}   % ~20 páginas - Presentar los resultados tal cual son, y analizarlos.
 \include{Capitulo5/conclusiones}            % ~5 páginas - Resumir lo que se hizo y lo que no y comentar trabajos futuros sobre el tema
 
-\end{Large}
+\end{large}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                   APÉNDICES                       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
