--- a/tesis.tex
+++ b/tesis.tex
@@ -15,12 +15,12 @@
 \usepackage[scaled]{uarial}
 \renewcommand*\familydefault{\sfdefault} %% Only if the base font of the document	
 
-
+\setlength{\parindent}{0cm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                   DATOS                                      %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{ DESARROLLO DE UN SISTEMA DE ALTO VOLTAJE PARA ACELERADORES DE PARTICULAS}
+\title{ \textsc{DESARROLLO DE UN SISTEMA DE ALTO VOLTAJE PARA ACELERADORES DE PARTICULAS}}
 \author{Juan Francisco Verdugo Arredondo} 
 \facultad{Facultad de Ciencias Físico Matemáticas}   
 \escudofacultad{Latex/Classes/Escudos/fmed_grande} % Aquí ponen la ruta y nombre del escudo de su facultad, actualmente, la carpeta Latex/Classes/Escudos cuenta con los siguientes escudos:
@@ -32,7 +32,7 @@
 \degree{Licenciado en Electrónica}       % Carrera
 \director{Carlos Duarte Galván \\ Christian Valerio Lizárraga}                  % Director de tesis
 %\tutor{Nombre  Tutor }                    % Tutor de tesis, si aplica
-\degreedate{2017}                                     % Año de la fecha del examen
+\degreedate{2019}                                     % Año de la fecha del examen
 \lugar{Culiacán, Sinaloa}                        % Lugar
 
 %\portadafalse                              % Portada en NEGRO, descomentar y comentar la línea siguiente si se quiere utilizar
@@ -64,11 +64,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \begin{center}
-{\Large Universidad Autónoma de Sinaloa}
+{\Large \textsc{UNIVERSIDAD AUTÓNOMA DE SINALOA}}
 
 \begin{Large}
 \setlength{\parskip}{20pt}
-Facultad de ciencias Físico Matemáticas
+FACULTAD DE CIENCIAS FÍSICO MATEMÁTICAS
 \end{Large}
 
 
@@ -122,7 +122,7 @@ Dr. Cristhian Alfonso Valerio Lizarraga\\
 
 
 \setlength{\parskip}{60pt}
-Culiacán, Sinaloa, 2018
+Culiacán, Sinaloa, 2019
 \end{center}
 
 \thispagestyle{empty}
@@ -198,6 +198,9 @@ Acelerador lineal de electrones. \url{https://www.fis.cinvestav.mx/~sincrotron/d
 
 \bibitem{ININ}Instituto Nacional de Investigaciones Nucleares. FUSIÓN NUCLEAR. \url{http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm}
 
+\bibitem{const}fundamental physical constants. \url{https://physics.nist.gov/cgi-bin/cuu/Value?tevj}
+
+
 \bibitem{IPC 2152}Standard for Determining Current-Carrying Capacity In Printed Board Design. \url{http://electronica.ugr.es/~amroldan/cursos/2014/pcb/modulos/temas/IPC2152.pdf}
 
 \bibitem{transformador}Trasformadores. Miguel Angel Rodríguez Pozueta
@@ -219,6 +222,8 @@ SISTEMA DE ENCENDIDO SIN DISTRIBUIDOR (DIS)'' \url{https://repositorio.espe.edu.
 \bibitem{fusor}University of Utah Marriott Library Special Collections. Archived from the original on 2013-10-21. Retrieved 2007-07-05. \url{https://wayback.archive-it.org/all/20131021170353/http://content.lib.utah.edu/cdm/ref/collection/UU_EAD/id/2160}
 
 \bibitem{fusion}FUSIÓN NUCLEAR. \url{http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm}
+
+\bibitem{librotra}Transformadores de distribución: teoría, cálculo, construcción y pruebas. \url{https://books.google.com.mx/books?id=_m_I-NT38_UC&dq=teoria+electromagnetica+transformadores&hl=es&source=gbs_navlinks_s}
 
 \bibitem{fara}Biografia Michael Faraday. \url{http://dcb.fi-c.unam.mx/CoordinacionesAcademicas/FisicaQuimica/ElectricidadMagnetismo/biografias/5\%20Michael\%20Faraday.pdf}
 
