--- a/Agradecimientos/Agradecimientos.tex
+++ b/Agradecimientos/Agradecimientos.tex
@@ -3,8 +3,8 @@
 
 \begin{acknowledgements}
 
-También quiero agradecer a mis grandes maestros que me enseñaron que la sabiduría se encuentra en la motivación y el trabajo duro, Dr. Carlos Duarte Galvan, Dr. Cristian Valerio, Dr. Roberto Millan, etc..\\
-A mi Universidad y sus instituciones, por abrirme las puertas a esta gran casa de estudio, al parque de innovación tecnológico, por haberme formado de la mejor manera posible y por la infinidad de oportunidades que se abren tras el conocimiento que se me ha otorgado. Sin mas ¡Gracias!
+También quiero agradecer a mis grandes maestros que me enseñaron que la sabiduría se encuentra en la motivación y el trabajo duro, Dr. Carlos Duarte Galvan, Dr. Cristian Alfonso Valerío Lizárraga, Dr. Jesús Roberto Millán Almaraz, etc..\\
+A mi Universidad, sus instituciones y al personal administrativo, por abrirme las puertas a esta gran casa de estudio, al parque de innovación tecnológico, por haberme formado de la mejor manera posible y por la infinidad de oportunidades que se abren tras el conocimiento que se me ha otorgado. Sin mas ¡GRACIAS!
 \end{acknowledgements}
 
 
