--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -32,15 +32,15 @@ Como resultado de esta tesis se muestra una comparación entre el diseño realiz
 \section{Antecedentes y justificación}
 
 
-Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de aceleradores de partículas, ya que tienen grandes aplicaciones en las áreas médicas, militares y alimentarias. Podemos hacer referencia, en medicina, a un hecho actual, el veinte porciento de los fármacos radiactivos que se inyectan en los pacientes son producidos en aceleradores del tipo sincrotrón \cite{ProyectoLNLS5}. Los cuales aceleran los protones típicamente a energías de 40 MeV. Estos aceleradores son diseñados para funcionar de manera confiable produciendo haces de alta intensidad con un mínimo de intervención humana, he allí la meta en esta tesis.\\
+Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de aceleradores de partículas, ya que tienen grandes aplicaciones en las áreas médicas, militares y alimentarias. \cite{ProyectoLNLS5}. Los cuales aceleran los protones típicamente a energías de 40 MeV. Estos aceleradores son diseñados para funcionar de manera confiable produciendo haces de alta intensidad con un mínimo de intervención humana, he allí la meta en esta tesis.\\
 
-En el pasado la radioterapia utilizaba agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es que tienen que tener un funcionamiento ininterrumpido, y con el pasar del tiempo su energía decae y es necesario cambiar la fuente radioactiva y resguardarla del medio ambiente, la cual representa un peligro para la humanidad y un problema sin solución actual, ya que la contaminación es latente.\\
+En el pasado la radioterapia utilizaba agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es tener un funcionamiento ininterrumpido, con el pasar del tiempo su energía decae y es necesario cambiar la fuente radioactiva, resguardarla del medio ambiente, la cual representa un peligro para la humanidad y un problema sin solución actual, ya que la contaminación es latente.\\
 
-Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”. Este Tokamak fue diseñado y construido por trabajadores mexicanos del ININ (Instituto Nacional de Investigaciones Nucleares) en el Centro Nuclear de Salazar, México.El trabajo con este acelerador, permitirá que el país se incorpore a una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. La continuación de investigaciones en fusion permitira a Mexico, el ingreso a programas del Organismo Internacional de Energía Atómica\cite{ININ}.\\
+Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”. Este Tokamak fue diseñado y construido por trabajadores mexicanos del ININ (Instituto Nacional de Investigaciones Nucleares) en el Centro Nuclear de Salazar, México. El trabajo con este acelerador, permitirá que el país se incorpore a una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. \\
 
 Bajo la premisa de la ventaja del desarrollo tecnológico de los aceleradores de partículas para nuestro país, es necesario comenzar los estudios en estos temas, ya que las posibilidades de aplicación son bastas y de suma importancia. Con el pasar del tiempo las aplicaciones han aumentado considerablemente, desde ramas de la medicina como ya lo mencionamos, hasta sistemas de aislamiento por campo magnético de plasmas y sistemas para aumentar temperaturas hasta puntos de fusión para sistemas de generación de energía en plantas de fusión nuclear, los mexicanos han apostado por la participación en el desarrollo de estas tecnologías.\\
 
-Este trabajo de tesis pretende dar un pequeño acercamiento a temas relacionados con los ya antes mencionados, mediante el desarrollo de la instrumentación de una fuente de alto voltaje para un acelerador de electrones lineal, el cual se divide en varias etapas de desarrollo. La primera es el sistema de fuentes, nos basaremos en el desarrollo echo por Cockroft-Walton (CW) (1932) combinado con un inversor de voltaje a alta frecuencia incidente en un embobinado de ignición controlado digital mente mediante un microcontrolador a lazo cerrado, el cual cuenta con una comunicación PC-HPS (HIGH POWER SUPPLY), permitiendo al usuario, mediante una retroalimentación, configurar la fuente de voltaje a los parámetros deseados, así como también guardar un registro en las variaciones de corriente y voltaje a la que nuestra fuente es sometida. \\
+Este trabajo de tesis pretende dar un pequeño acercamiento a temas relacionados con los ya antes mencionados, mediante el desarrollo de la instrumentación de una fuente de alto voltaje para un acelerador de electrones lineal, el cual se divide en varias etapas de desarrollo. La primera es el sistema de fuentes, nos hemos basado en el sistema Cockroft-Walton (CW) (1932) combinado con un inversor de voltaje de alta frecuencia incidente en un embobinado de ignición controlado digitalmente mediante un microcontrolador a lazo cerrado, el cual cuenta con una comunicación PC-HPS (HIGH POWER SUPPLY), permitiendo al usuario, mediante una retroalimentación, configurar la fuente de voltaje a los parámetros deseados, así como también guardar un registro en las variaciones de corriente y voltaje a la que nuestra fuente es sometida. \\
 \newpage
 
 
@@ -49,10 +49,10 @@ Este trabajo de tesis pretende dar un pequeño acercamiento a temas relacionados
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Planteamiento del problema}
-Hoy en día el desarrollo de tecnologías que involucran aceleradores de partículas esta cada vez mas presentes en la vida diaria, en México ya existe participación en desarrollo de gran nivel, como lo es el Instituto de Investigaciones Nucleares (ININ) y distintos laboratorios de gran importancia en nuestro país, lo cual brinda la posibilidad a los investigadores de involucrarse en este tipo de desarrollo para poder satisfacer las necesidades
+Hoy en día el desarrollo de tecnologías que involucran aceleradores de partículas esta cada vez mas presentes en la vida diaria, en México ya existe participación en desarrollo de gran nivel, como lo es el Instituto de Investigaciones Nucleares (ININ), lo cual brinda la posibilidad a los investigadores de involucrarse en este tipo de desarrollo para poder satisfacer las necesidades
 que se requieren.\\
 
-El uso de aceleradores de partículas para aplicaciones medicas ha tenido gran auge en los últimos años, ya que las ventajas que tienen sobre las fuentes radioactivas son bastas, este echo da la oportunidad a las universidades de preparar expertos en estos temas y diseñar maquinaria a medida, que cumpla las exigencias de la región. Aunque ya existen trabajos referentes a fuentes de alto voltaje, generación de electrones mediante telurio y detectores de estos mismos, la curva de aprendizaje necesaria para especializarse en estos temas es grande y dejar un precedente en nuestro país es necesaria y muy útil, es por ello que estas
+El uso de aceleradores de partículas para aplicaciones medicas ha tenido gran auge en los últimos años, ya que las ventajas que tienen sobre las fuentes radioactivas son bastas, este hecho da la oportunidad a las universidades de preparar expertos en estos temas y diseñar maquinaria a medida, que cumpla las exigencias de la región. Aunque ya existen trabajos referentes a fuentes de alto voltaje, generación de electrones mediante telurio y detectores de estos mismos, la curva de aprendizaje necesaria para especializarse en estos temas es grande y dejar un precedente en nuestro país es necesaria y muy útil, es por ello que estas
 investigaciones son de gran importancia.
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -68,22 +68,22 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 
 
 \begin{itemize}
-\item Desarrollo de fuente estable de alto voltaje.
+\item Desarrollo de fuente de alto voltaje.
 \begin{itemize}
-\item Diseño de fuente de voltaje a 12V, 180W y bajo ruido.
+\item Diseño de fuente de voltaje a 12V, 180W.
 \item Simulación de fuente de voltaje a 12V.
-\item Construcción de fuente de voltaje 12V.
+\item Maquinado de fuente de voltaje 12V.
 \item Diseño de driver modulador de ancho de pulso (PWM) bipolar para inversor.
-\item Simulación de driver generador de PWM bipolar
+\item Simulación de driver generador de PWM.
 \item Construcción de driver (PWM) bipolar.
-\item Diseño de interfaces gráficas para control de inversor
+\item Diseño de interfaces gráficas para control de inversor.
 \item Mediciones y comparaciones entre fuentes comerciales.
-\item Análisis de costos
+\item Análisis de costos.
 \end{itemize}  
 \end{itemize}
 
 \subsection{Hipótesis}
-El diseño adecuando de un sistema de generación de alto voltaje nos permite llevar acabo experimentos y de alta precisión, con el cual se podrá desarrollar tecnología aplicada en esta área.
+El diseño adecuando de un sistema de generación de alto voltaje nos permite llevar acabo experimentos, con el cual se podrá desarrollar tecnología aplicada en esta área.
 
 \newpage
 
@@ -93,4 +93,4 @@ El diseño adecuando de un sistema de generación de alto voltaje nos permite ll
 
 \section{Estructura de la tesis}
 
-Este trabajo está dividido en 5 capítulos. El primero habla sobre un resumen del trabajo realizado, el segundo es un marco teórico que pone en contexto el desarrollo del proyecto y expone las partes técnicas, en el capitulo 3 se expone el proceso y la metodología realizada, el capitulo 4 incluye un breve análisis de resultados el cual muestra una síntesis de las mediciones y el trabajo teórico, y por ultimo un análisis de resultados. 
+Este trabajo está dividido en 5 capítulos. El primero habla sobre un resumen del trabajo realizado, el segundo es un marco teórico que pone en contexto el desarrollo del proyecto y expone las partes técnicas, en el capítulo 3 se expone el proceso y la metodología realizada, el capítulo 4 incluye un breve análisis de resultados el cual muestra una síntesis de las mediciones y el trabajo teórico, y por ultimo un análisis de resultados. 
